--- a/main.css
+++ b/main.css
@@ -311,12 +311,14 @@ background: linear-gradient(blue,rgb(0, 102, 255))
 }
 
 .section-testimonials{
+  position: relative;
   display: flex;
+
 }
 .testimonials-client-header{
 margin-bottom: 50px;
-text-align: center
-
+text-align: center;
+z-index:1;
 }
 .testimonials-client-header h3{
   font-size: 2rem;
@@ -450,6 +452,7 @@ box-shadow: 0px 5px 20px 5px rgba(0,0,0,0.2);
 
 }
 .contact-info{
+  position: relative;
   display: flex;
 }
 .contact-form{
@@ -467,12 +470,14 @@ box-shadow: 0px 5px 20px 5px rgba(0,0,0,0.2);
   justify-content: flex-start;
   width: 70%;
   margin-bottom: 50px;
+  z-index:1;
 }
 .contact-form h2{
   width: 70%;
   text-align: center;
   margin: 80px 0px 20px;
   color: white;
+  z-index: 1;
 }
 .form-element{
   margin-bottom: 20px;
@@ -586,9 +591,21 @@ justify-content: center;
   padding-left: 0px;
   overflow-x: hidden;
 }
-
-
-@media screen and (min-width: 0px) and (max-width: 765px) {
+.overlay-purple{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 50%;
+  opacity: 1;
+  background-color: rgba(33, 27, 49, 0.95);
+}
+.overlay-dark-purple{
+  background-color:rgba(33, 27, 49, 0.8);
+}
+@media screen and (min-width: 0px) and (max-width: 768px) {
   .hide-on-mobile{
     display: none;
   }
@@ -630,5 +647,9 @@ justify-content: center;
   .front-text h1{
     font-size: 1.5em;
     margin: 350px 0px 30px;
+  }
+  .overlay-purple{
+  width: 100%;
+  height: 50%;
   }
 }
